petition details page forms alignment fix

--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -674,6 +674,15 @@ section {
 
 
     .table-data-forms {
+
+        /*.col-md-6:nth-child(odd) {
+            padding-left:0px !important;
+
+        }
+        .col-md-6:nth-child(even) {
+            padding-right:0px !important;
+        }*/
+
         /*overflow-y:auto;*/
                 h2 {
             color: #232f3f !important;
